--- a/index.html
+++ b/index.html
@@ -1,18 +1,246 @@
-<!-- 
-    Lista de cosas.
-    - Meta: eslo del sso de google, hay que agregar meta-description y meta-keywords.
-    - Agregar meta con keywords como: damas, juegos de damas, entretenimiento, juegos online, etc. (es para la busqueda de google)
-
--->
-
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mini Damas</title>
-</head>
-<body>
-    
-</body>
+<!DOCTYPE html>
+<html lang="es">
+   <head>
+      <title>Mini Damas</title>
+      <meta name="Description" content="Juega a las damas online. Reta al ordenador y consigue ganarle en el menor tiempo posible.">
+      <link rel="stylesheet" href="styles.css">
+   </head>
+   <body>
+      <div></div>
+      </div>   
+      <nav class="navbar navbar-static-top navbar-inner" role="navigation">
+         <div class="container">
+            <div class="navbar-header">
+               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+               <span class="sr-only">Navegación</span>
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+               </button>
+               <h1><a class="navbar-brand" href="index.html">Mini Damas</a></h1>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse">
+               <ul class="nav navbar-nav">
+                  <li><a href="index.html" title="Damas online">Damas</a></li>
+                  <li><a href="https://es.wikipedia.org/wiki/Damas" title="Qué son las damas">¿Qué es?</a></li>
+               </ul>
+            </div>
+         </div>
+      </nav>
+      <div class="container">
+         <ul class="breadcrumb">
+            <li><a href="index.html">Mini Damas</a></li>
+            <li class="active">Portada</li>
+         </ul>
+         <div class="row">
+            <div class="col-md-12">
+               <div class="tablero">
+                  <div id="checkersContainer">
+                     <div id="checkersBoard">
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="checkersSquare dark">
+                        </div>
+                        <div class="checkersSquare bright">
+                        </div>
+                        <div class="piece black" style="left: 0px; top: 420px;">
+                        </div>
+                        <div class="piece white" style="left: 60px; top: 0px;">
+                        </div>
+                        <div class="piece black" style="left: 120px; top: 420px;">
+                        </div>
+                        <div class="piece white" style="left: 180px; top: 0px;">
+                        </div>
+                        <div class="piece black" style="left: 240px; top: 420px;">
+                        </div>
+                        <div class="piece white" style="left: 300px; top: 0px;">
+                        </div>
+                        <div class="piece black" style="left: 360px; top: 420px;">
+                        </div>
+                        <div class="piece white" style="left: 420px; top: 0px;">
+                        </div>
+                        <div class="piece black" style="left: 60px; top: 360px;">
+                        </div>
+                        <div class="piece white" style="left: 0px; top: 60px;">
+                        </div>
+                        <div class="piece black" style="left: 180px; top: 360px;">
+                        </div>
+                        <div class="piece white" style="left: 120px; top: 60px;">
+                        </div>
+                        <div class="piece black" style="left: 300px; top: 360px;">
+                        </div>
+                        <div class="piece white" style="left: 240px; top: 60px;">
+                        </div>
+                        <div class="piece black" style="left: 420px; top: 360px;">
+                        </div>
+                        <div class="piece white" style="left: 360px; top: 60px;">
+                        </div>
+                        <div class="piece black" style="left: 0px; top: 300px;">
+                        </div>
+                        <div class="piece white" style="left: 60px; top: 120px;">
+                        </div>
+                        <div class="piece black" style="left: 120px; top: 300px;">
+                        </div>
+                        <div class="piece white" style="left: 180px; top: 120px;">
+                        </div>
+                        <div class="piece black" style="left: 240px; top: 300px;">
+                        </div>
+                        <div class="piece white" style="left: 300px; top: 120px;">
+                        </div>
+                        <div class="piece black" style="left: 360px; top: 300px;">
+                        </div>
+                        <div class="piece white" style="left: 420px; top: 120px;">
+                        </div>
+                     </div>
+                     <div id="buttonContainer" class="text-center">
+                        <div id="newGameButton">
+                           Nueva partida
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="row">
+            <div class="col-md-12">
+               <div id="desc">
+                  <p>Las <strong>damas</strong> es un juego de mesa para dos personas en un tablero de 64 cuadros. El juego consiste en mover las fichas en diagonal sobre los cuadros negros con el objetivo de comer las piezas del contrario saltando sobre ellas.</p>
+                  <p>Cada jugador dispone de 12 fichas de un mismo color situadas en las casillas negras más próximas a éste. El objetivo del juego es capturar las fichas del oponente o acorralarlas para que no puedan realizar movimientos.</p>
+                  <p>Si no conoces las reglas, sigue leyendo cómo se juega en <a href="https://es.wikipedia.org/wiki/Damas">Reglas de las damas</a>.</p>
+               </div>
+            </div>
+         </div>
+      </div>
+      <footer class="footer">
+         <div class="container">
+            <div class="row">
+               <div class="col-md-7">
+                  <p><strong>Jonathan Martino</strong> - Juega a las damas online - <a href="mailto:jonamartino@gmail.com">Contacto</a></p>
+               </div>
+            </div>
+         </div>
+      </footer>
+   </body>
 </html>
