index y js modificados para hacer el tablero dinamico v1

--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
       <title>Mini Damas</title>
       <meta name="Description" content="Juega a las damas online. Reta al ordenador y consigue ganarle en el menor tiempo posible.">
       <link rel="stylesheet" href="styles.css">
+      <script src="app.js"> </script>
    </head>
    <body>
-      <div></div>
-      </div>   
       <nav class="navbar navbar-static-top navbar-inner" role="navigation">
          <div class="container">
             <div class="navbar-header">
@@ -28,192 +27,95 @@
          </div>
       </nav>
       <div class="container">
+        
          <ul class="breadcrumb">
             <li><a href="index.html">Mini Damas</a></li>
             <li class="active">Portada</li>
          </ul>
-         <div class="row">
-            <div class="col-md-12">
-               <div class="tablero">
-                  <div id="checkersContainer">
-                     <div id="checkersBoard">
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="checkersSquare dark">
-                        </div>
-                        <div class="checkersSquare bright">
-                        </div>
-                        <div class="piece black" style="left: 0px; top: 420px;">
-                        </div>
-                        <div class="piece white" style="left: 60px; top: 0px;">
-                        </div>
-                        <div class="piece black" style="left: 120px; top: 420px;">
-                        </div>
-                        <div class="piece white" style="left: 180px; top: 0px;">
-                        </div>
-                        <div class="piece black" style="left: 240px; top: 420px;">
-                        </div>
-                        <div class="piece white" style="left: 300px; top: 0px;">
-                        </div>
-                        <div class="piece black" style="left: 360px; top: 420px;">
-                        </div>
-                        <div class="piece white" style="left: 420px; top: 0px;">
-                        </div>
-                        <div class="piece black" style="left: 60px; top: 360px;">
-                        </div>
-                        <div class="piece white" style="left: 0px; top: 60px;">
-                        </div>
-                        <div class="piece black" style="left: 180px; top: 360px;">
-                        </div>
-                        <div class="piece white" style="left: 120px; top: 60px;">
-                        </div>
-                        <div class="piece black" style="left: 300px; top: 360px;">
-                        </div>
-                        <div class="piece white" style="left: 240px; top: 60px;">
-                        </div>
-                        <div class="piece black" style="left: 420px; top: 360px;">
-                        </div>
-                        <div class="piece white" style="left: 360px; top: 60px;">
-                        </div>
-                        <div class="piece black" style="left: 0px; top: 300px;">
-                        </div>
-                        <div class="piece white" style="left: 60px; top: 120px;">
-                        </div>
-                        <div class="piece black" style="left: 120px; top: 300px;">
-                        </div>
-                        <div class="piece white" style="left: 180px; top: 120px;">
-                        </div>
-                        <div class="piece black" style="left: 240px; top: 300px;">
-                        </div>
-                        <div class="piece white" style="left: 300px; top: 120px;">
-                        </div>
-                        <div class="piece black" style="left: 360px; top: 300px;">
-                        </div>
-                        <div class="piece white" style="left: 420px; top: 120px;">
-                        </div>
-                     </div>
+         <div id="checkersContainer">
+            <section id="board" class="main-content__board">
+               <!--<div class="board__row row1">
+                  <div class="row__item item1-1"></div>
+                  <div class="row__item item1-2 has-white-piece"></div>
+                  <div class="row__item item1-3"></div>
+                  <div class="row__item item1-4 has-white-piece"></div>
+                  <div class="row__item item1-5"></div>
+                  <div class="row__item item1-6 has-white-piece"></div>
+                  <div class="row__item item1-7"></div>
+                  <div class="row__item item1-8 has-white-piece"></div>
+               </div>
+               <div class="board__row row2">
+                  <div class="row__item item1-1 has-white-piece"></div>
+                  <div class="row__item item1-2"></div>
+                  <div class="row__item item1-3 has-white-piece"></div>
+                  <div class="row__item item1-4"></div>
+                  <div class="row__item item1-5 has-white-piece"></div>
+                  <div class="row__item item1-6"></div>
+                  <div class="row__item item1-7 has-white-piece"></div>
+                  <div class="row__item item1-8"></div>
+               </div>
+               <div class="board__row row3">
+                  <div class="row__item item1-1"></div>
+                  <div class="row__item item1-2 has-white-piece"></div>
+                  <div class="row__item item1-3"></div>
+                  <div class="row__item item1-4 has-white-piece"></div>
+                  <div class="row__item item1-5"></div>
+                  <div class="row__item item1-6 has-white-piece"></div>
+                  <div class="row__item item1-7"></div>
+                  <div class="row__item item1-8 has-white-piece"></div>
+               </div>
+               <div class="board__row row4">
+                  <div class="row__item item1-1 has-white-piece"></div>
+                  <div class="row__item item1-2"></div>
+                  <div class="row__item item1-3 has-white-piece"></div>
+                  <div class="row__item item1-4"></div>
+                  <div class="row__item item1-5 has-white-piece"></div>
+                  <div class="row__item item1-6"></div>
+                  <div class="row__item item1-7 has-white-piece"></div>
+                  <div class="row__item item1-8"></div>
+               </div>
+               <div class="board__row row5">
+                  <div class="row__item item1-1"></div>
+                  <div class="row__item item1-2 has-white-piece"></div>
+                  <div class="row__item item1-3"></div>
+                  <div class="row__item item1-4 has-white-piece"></div>
+                  <div class="row__item item1-5"></div>
+                  <div class="row__item item1-6 has-white-piece"></div>
+                  <div class="row__item item1-7"></div>
+                  <div class="row__item item1-8 has-white-piece"></div>
+               </div>
+               <div class="board__row row6">
+                  <div class="row__item item1-1 has-white-piece"></div>
+                  <div class="row__item item1-2"></div>
+                  <div class="row__item item1-3 has-white-piece"></div>
+                  <div class="row__item item1-4"></div>
+                  <div class="row__item item1-5 has-white-piece"></div>
+                  <div class="row__item item1-6"></div>
+                  <div class="row__item item1-7 has-white-piece"></div>
+                  <div class="row__item item1-8"></div>
+               </div>
+               <div class="board__row row7">
+                  <div class="row__item item1-1"></div>
+                  <div class="row__item item1-2 has-white-piece"></div>
+                  <div class="row__item item1-3"></div>
+                  <div class="row__item item1-4 has-white-piece"></div>
+                  <div class="row__item item1-5"></div>
+                  <div class="row__item item1-6 has-white-piece"></div>
+                  <div class="row__item item1-7"></div>
+                  <div class="row__item item1-8 has-white-piece"></div>
+               </div>
+               <div class="board__row row8">
+                  <div class="row__item item1-1 has-white-piece"></div>
+                  <div class="row__item item1-2"></div>
+                  <div class="row__item item1-3 has-white-piece"></div>
+                  <div class="row__item item1-4"></div>
+                  <div class="row__item item1-5 has-white-piece"></div>
+                  <div class="row__item item1-6"></div>
+                  <div class="row__item item1-7 has-white-piece"></div>
+                  <div class="row__item item1-8"></div>
+               </div>-->
+            </section>
+      </main>
                      <div id="buttonContainer" class="text-center">
                         <div id="newGameButton">
                            Nueva partida
@@ -223,6 +125,7 @@
                </div>
             </div>
          </div>
+      </div>
          <div class="row">
             <div class="col-md-12">
                <div id="desc">
