Funcionalidad de seleccion de fichas y movimiento en las celdas permitidas.. falta regla para comer fichas

--- a/index.html
+++ b/index.html
@@ -27,101 +27,15 @@
          </div>
       </nav>
       <div class="container">
-        
          <ul class="breadcrumb">
             <li><a href="index.html">Mini Damas</a></li>
             <li class="active">Portada</li>
          </ul>
          <div id="checkersContainer">
-            <section id="board" class="main-content__board">
-               <!--<div class="board__row row1">
-                  <div class="row__item item1-1"></div>
-                  <div class="row__item item1-2 has-white-piece"></div>
-                  <div class="row__item item1-3"></div>
-                  <div class="row__item item1-4 has-white-piece"></div>
-                  <div class="row__item item1-5"></div>
-                  <div class="row__item item1-6 has-white-piece"></div>
-                  <div class="row__item item1-7"></div>
-                  <div class="row__item item1-8 has-white-piece"></div>
-               </div>
-               <div class="board__row row2">
-                  <div class="row__item item1-1 has-white-piece"></div>
-                  <div class="row__item item1-2"></div>
-                  <div class="row__item item1-3 has-white-piece"></div>
-                  <div class="row__item item1-4"></div>
-                  <div class="row__item item1-5 has-white-piece"></div>
-                  <div class="row__item item1-6"></div>
-                  <div class="row__item item1-7 has-white-piece"></div>
-                  <div class="row__item item1-8"></div>
-               </div>
-               <div class="board__row row3">
-                  <div class="row__item item1-1"></div>
-                  <div class="row__item item1-2 has-white-piece"></div>
-                  <div class="row__item item1-3"></div>
-                  <div class="row__item item1-4 has-white-piece"></div>
-                  <div class="row__item item1-5"></div>
-                  <div class="row__item item1-6 has-white-piece"></div>
-                  <div class="row__item item1-7"></div>
-                  <div class="row__item item1-8 has-white-piece"></div>
-               </div>
-               <div class="board__row row4">
-                  <div class="row__item item1-1 has-white-piece"></div>
-                  <div class="row__item item1-2"></div>
-                  <div class="row__item item1-3 has-white-piece"></div>
-                  <div class="row__item item1-4"></div>
-                  <div class="row__item item1-5 has-white-piece"></div>
-                  <div class="row__item item1-6"></div>
-                  <div class="row__item item1-7 has-white-piece"></div>
-                  <div class="row__item item1-8"></div>
-               </div>
-               <div class="board__row row5">
-                  <div class="row__item item1-1"></div>
-                  <div class="row__item item1-2 has-white-piece"></div>
-                  <div class="row__item item1-3"></div>
-                  <div class="row__item item1-4 has-white-piece"></div>
-                  <div class="row__item item1-5"></div>
-                  <div class="row__item item1-6 has-white-piece"></div>
-                  <div class="row__item item1-7"></div>
-                  <div class="row__item item1-8 has-white-piece"></div>
-               </div>
-               <div class="board__row row6">
-                  <div class="row__item item1-1 has-white-piece"></div>
-                  <div class="row__item item1-2"></div>
-                  <div class="row__item item1-3 has-white-piece"></div>
-                  <div class="row__item item1-4"></div>
-                  <div class="row__item item1-5 has-white-piece"></div>
-                  <div class="row__item item1-6"></div>
-                  <div class="row__item item1-7 has-white-piece"></div>
-                  <div class="row__item item1-8"></div>
-               </div>
-               <div class="board__row row7">
-                  <div class="row__item item1-1"></div>
-                  <div class="row__item item1-2 has-white-piece"></div>
-                  <div class="row__item item1-3"></div>
-                  <div class="row__item item1-4 has-white-piece"></div>
-                  <div class="row__item item1-5"></div>
-                  <div class="row__item item1-6 has-white-piece"></div>
-                  <div class="row__item item1-7"></div>
-                  <div class="row__item item1-8 has-white-piece"></div>
-               </div>
-               <div class="board__row row8">
-                  <div class="row__item item1-1 has-white-piece"></div>
-                  <div class="row__item item1-2"></div>
-                  <div class="row__item item1-3 has-white-piece"></div>
-                  <div class="row__item item1-4"></div>
-                  <div class="row__item item1-5 has-white-piece"></div>
-                  <div class="row__item item1-6"></div>
-                  <div class="row__item item1-7 has-white-piece"></div>
-                  <div class="row__item item1-8"></div>
-               </div>-->
-            </section>
-      </main>
-                     <div id="buttonContainer" class="text-center">
-                        <div id="newGameButton">
-                           Nueva partida
-                        </div>
-                     </div>
-                  </div>
+            <section id="board" class="main-content__board"> </section>
+            <div id="buttonContainer" class="text-center">
+               <div id="newGameButton">
+                  Nueva partida
                </div>
             </div>
          </div>
