Agregadas la funcionalidades de deseleccion, turnos, y mensaje de quien tiene que mover la ficha

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
             <li class="active">Portada</li>
          </ul>
          <div id="checkersContainer">
+            <div id="turnContainer" class="text-center">
+               <div id="turnText">
+               </div>
+            </div>
             <section id="board" class="main-content__board"> </section>
             <div id="buttonContainer" class="text-center">
                <div id="newGameButton">
