Agregada pagina de formulario + conexion con archivo php para realizar las consultas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
       <title>Mini Damas</title>
       <meta name="Description" content="Juega a las damas online. Reta al ordenador y consigue ganarle en el menor tiempo posible.">
       <link rel="stylesheet" href="styles.css">
-      <script src="app.js"> </script>
+      <script
+              src="https://code.jquery.com/jquery-3.6.0.js"
+              integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+              crossorigin="anonymous">
+      </script>
+     
+      <script src="app.js" async> </script>
    </head>
    <body>
       <nav class="navbar navbar-static-top navbar-inner" role="navigation">
@@ -21,6 +27,7 @@
             <div id="navbar" class="collapse navbar-collapse">
                <ul class="nav navbar-nav">
                   <li><a href="index.html" title="Damas online">Damas</a></li>
+                  <li><a href="form.html" title="Contacto">Contacto</a></li>
                   <li><a href="https://es.wikipedia.org/wiki/Damas" title="Qué son las damas">¿Qué es?</a></li>
                </ul>
             </div>
